<resources>
    <string name="app_name">Hackage</string>

    <!-- Choice Fragment -->
    <string name="choice_fragment_hackage">Hackage</string>
    <string name="choice_fragment_hoogle">Hoogle</string>
    <string name="choice_fragment_users">Users</string>
    <string name="choice_fragment_video">Videos</string>

    <!-- Package Fragment -->
    <string name="package_fragment_author">Author</string>
    <string name="package_fragment_license">License</string>
    <string name="package_fragment_maintainer">Maintainer</string>
    <string name="package_fragment_downloads">Downloads</string>
    <string name="package_fragment_source_repo">Source Repo</string>
    <string name="package_fragment_readme">Readme</string>

    <string name="hoogle_website">https://www.haskell.org/hoogle/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
