<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bloold.hackage.MainActivity"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        >


        <TextView
            android:id="@+id/tvHackageChoice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/choice_fragment_hackage"
            />

        <TextView
            android:id="@+id/tvHoogleChoice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:text="@string/choice_fragment_hoogle"
            />

        <TextView
            android:id="@+id/tvUsersChoice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:gravity="center"
            android:background="@android:color/holo_blue_light"
            android:text="@string/choice_fragment_users"
            />

        <TextView
            android:id="@+id/tvVideoChoice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:background="#6633b5e5"
            android:text="@string/choice_fragment_video"
            />

    </LinearLayout>

</FrameLayout>
